auto-test/tests/chapter_18/invalid_types/extra_credit/bad_union_member_access/union_bad_pointer_member.c
void *malloc(unsigned long size);

union a {
  int x;
  int y;
};

union b {
  int m;
  int n;
};

int main(void) {
  union a *ptr = malloc(sizeof(union a));
  ptr->m = 10; 
  return 0;
}
